--- a/asporto/index.html
+++ b/asporto/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Dal Giovedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
+                <p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
@@ -118,7 +118,6 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare - Fritti</h2>
-
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
@@ -141,21 +140,6 @@
                             <small>Contiene: Glutine, Latte, Crostacei</small></p>
                         </li>
                         <li>
-                            <h3>Falafel <span class="price">5,5</span></h3>
-                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa <br>
-                            <small>Contiene: Glutine, Sedano, Senape</small></p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte <span class="price">4,5</span></h3>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare - Spadellati e Grigliati</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                        <li>
                             <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
                             <p>Peperoncini ripieni di robiola avvolti nella pancetta <br>
                             <small>Contiene: Anidride Solforosa e Solfiti, Latte</small></p>
@@ -169,15 +153,22 @@
                             <h3>Arrosticini <span class="price">5,5</span></h3>
                             <p>Arrosticini di pecora</p>
                         </li>
+                        <li>
+                            <h3>Falafel <span class="price">5,5</span></h3>
+                            <p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa <br>
+                            <small>Contiene: Glutine, Sedano, Senape</small></p>
+                        </li>
+                        <li>
+                            <h3>Patate Fritte <span class="price">4,5</span></h3>
+                        </li>
                     </ul>
                 </div>
-            </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per i Più Piccoli</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Mini Burger e Patatine <span class="price">6,9</span></h3>
+                            <h3>Mini Burger e Patatine <span class="price">7,9</span></h3>
                             <p>Manzo (100 grammi), cheddar. Servito con patatine e ben cotto <br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
@@ -189,24 +180,29 @@
                     <h2 class="subheader">Hamburger Classici<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Beerstrot <span class="price">10,9 / doppio 14,9</span></h3>
+                            <h3>Beerstrot <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
-                            <h3>New York <span class="price">9,5 / doppio 14,9</span></h3>
+                            <h3>New York <span class="price">10,5 / doppio 14,5</span></h3>
                             <p>Manzo, cheddar, cipolla caramellata, insalata<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
-                            <h3>Diablo <span class="price">10,9 / doppio 14,9</span></h3>
+                            <h3>Diablo <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
                         <li>
-                            <h3>Pollo <span class="price">9,5 / doppio 14,9</span></h3>
+                            <h3>Pollo <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li>
+                        <li>
+                            <h3>Pulled Pork <span class="price">11,9</span></h3>
+                            <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante<br>
+                            <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Latte, Senape, Uova</small></p>
                         </li>
                     </ul>
                 </div>
@@ -215,56 +211,52 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Hamburger Stagionali<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Pulled Pork <span class="price">10,5</span></h3>
-                            <p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante<br>
-                            <small>Contiene: Anidride Solforosa e Solfiti, Glutine, Latte, Senape, Uova</small></p>
-                        </li>
-                   <!--     <li>
-                            <h3>Autunno <span class="price">10,5 / doppio 14,9</span></h3>
+
+                        <!-- <li>
+                            <h3>Autunno <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, scamorza affumicata, crema di funghi, speck croccante<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
-                     <!--    <li>
-                            <h3>Inverno <span class="price">10,5 / doppio 14,9</span></h3>
+                        <!-- <li>
+                            <h3>Inverno <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
                         <li>
-                            <h3>Primavera <span class="price">10,9 / doppio 14,9</span></h3>
+                            <h3>Primavera <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p></li>
                         <li>
-                            <h3>Deciso <span class="price">10,9 / doppio 14,9</span></h3>
+                            <h3>Deciso <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li> 
-                         <li>
-                            <h3>Fave e Pecorino <span class="price">10,9 / doppio 14,9</span></h3>
+                        </li>
+                        <li>
+                            <h3>Fave e Pecorino <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li> 
-                  <!--      <li>
-                            <h3>Mantovano <span class="price">10,9 / doppio 14,9</span></h3>
+                        </li>
+                        <!-- <li>
+                            <h3>Mantovano <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante<br>
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                         </li> -->
-                    <!--    <li>
-                            <h3>Estivo <span class="price">10,9 / doppio 14,9</span></h3>
+                        <!-- <li>
+                            <h3>Estivo <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
-                        </li>  -->
+                        </li> -->
                         <li>
-                            <h3>Carbonara <span class="price">10,9 / doppio 14,9</span></h3>
+                            <h3>Carbonara <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
-                <!--        <li>
-                            <h3>Greco <span class="price">9,5 / doppio 14,9</span></h3>
+                        <!-- <li>
+                            <h3>Greco <span class="price">10,5 / doppio 14,5</span></h3>
                             <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
                         </li> -->
                     </ul>
                 </div>
-		</div>
+           </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Hamburger Vegetariani<br><small>Serviti con patate fritte</small></h2>
@@ -307,39 +299,36 @@
                     <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                       <!--     <li>
+                            <!-- <li>
                                 <h3>Crumble <span class="price">5</span></h3>
-                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
+                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente <br>
+                                <small>Contiene: Latte, Uova</small></p>
                             </li> -->
-                        <!--    <li>
+                            <!-- <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato<br>
-                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                                <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li> -->
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula<br>
-                            <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
-                            </li>
-                            <li>
-                                <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum <br>
                                 <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
                             <li>
+                                <h3>Blondie <span class="price">5</span></h3>
+                                <p>Brownie con nocciole. Servito con crema chantilly<br>
+                                <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
+                            </li>
+                            <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout<br>
                                 <small>Contiene: Glutine, Latte, Uova</small></p>
-                            </li>
-			                <li>
+                            </li> -->
+                            <li>
                                 <h3>Whoop<span class="price">5</span></h3>
                                 <p>Morbido biscotto al cioccolato ripieno di burro di arachidi<br>
                                 <small>Contiene: Arachidi, Glutine, Latte, Uova</small></p>
                             </li>
-                            <!-- <li>
-                                <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
-                                <p>Cantucci artigianali serviti con vino di visciole</p>
-                            </li> -->
                         </ul>
                         <br>
                     </div>
@@ -372,7 +361,7 @@
 						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
 					</li>
-		  			<li>
+		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
@@ -380,7 +369,16 @@
                                 <p><strong>Aperto dal Giovedì alla Domenica.</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
-                 	</li>
+                 	</li> -->
+                    <li>
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
+                        <div class="row">
+                            <div class="large-12 medium-12 small-12 columns">
+                                <p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
+                            </div>
+                        </div>
+                    </li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
 		                <p>
