--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -142,7 +142,7 @@
                             </a>
                         </p>
                     </li>
-                    <li>
+                    <!-- <li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                        	<div class="row">
@@ -150,7 +150,16 @@
                                 <p><strong>Aperto dal Giovedì alla Domenica.</strong><br>Dalle 19:00 alle 23:00</p>
                             </div>
                        	</div>
-                 	</li>
+                 	</li> -->
+                    <li>
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Mo, Thu, Th, Fr, Sa, Su 19:00-23:00">
+                        <div class="row">
+                            <div class="large-12 medium-12 small-12 columns">
+                                <p><strong>Aperto tutti i giorni</strong><br>Dalle 19:00 alle 23:00</p>
+                            </div>
+                        </div>
+                    </li>
                     <li>
                         <h4 class="subheader">Accettiamo</h4>
                         <ul class="block-grid-cards-3">
