--- a/asporto/index.html
+++ b/asporto/index.html
@@ -163,6 +163,28 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+            <!-- <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Per Stuzzicare</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
+                            <p>Peperoncini ripieni di robiola avvolti nella pancetta <br>
+                            <small>Contiene: Anidride Solforosa e Solfiti, Latte</small></p>
+                        </li>
+                        <li>
+                            <h3>Alette di Pollo <span class="price">5,5</span></h3>
+                            <p>A scelta fra leggermente piccanti o piccanti <br>
+                            <small>Contiene: Glutine, Uova, Latte</small></p>
+                        </li>
+                        <li>
+                            <h3>Arrosticini <span class="price">5,5</span></h3>
+                            <p>Arrosticini di pecora</p>
+                        </li>
+                    </ul>
+                </div>
+            </div> -->
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per i Più Piccoli</h2>
@@ -329,6 +351,10 @@
                                 <p>Morbido biscotto al cioccolato ripieno di burro di arachidi<br>
                                 <small>Contiene: Arachidi, Glutine, Latte, Uova</small></p>
                             </li>
+                            <!-- <li>
+                                <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
+                                <p>Cantucci artigianali serviti con vino di visciole</p>
+                            </li> -->
                         </ul>
                         <br>
                     </div>
@@ -339,6 +365,7 @@
                 </div>
             </div>
         </section>
+<!-- cena fine -->
 <!-- call to action inizio -->
         <div class="row">
             <div class="medium-12 large-12 columns">
