--- a/menu/index.html
+++ b/menu/index.html
@@ -409,10 +409,16 @@
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
-		                <li>
+
+<li>
+                            <h3>Punto</h3>
+                            <p>Session IPA 3,9% <br><em>Birrificio Mc-77</em></p>
+                        </li>
+
+		              <!--  <li>
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Billycock</h3>
                             <p>Doppia New England IPA 7,8% <br><em>Birrificio MC-77</em></p>
