--- a/menu/index.html
+++ b/menu/index.html
@@ -245,11 +245,11 @@
                             <h3>Primavera <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p></li>
-                        <li>
+                        <!-- <li>
                             <h3>Deciso <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li> 
+                        </li>  -->
                         <li>
                             <h3>Fave e Pecorino <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
@@ -409,13 +409,11 @@
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
-
-<li>
+                        <li>
                             <h3>Punto</h3>
-                            <p>Session IPA 3,9% <br><em>Birrificio Mc-77</em></p>
+                            <p>Session IPA 3,9% <br><em>Birrificio MC-77</em></p>
                         </li>
-
-		              <!--  <li>
+		                <!-- <li>
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                         </li> -->
@@ -676,14 +674,10 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Drinks</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
-                   <!--    <li>
+                        <li>
                             <h3>Spritz <span class="price">5</span></h3>
                             <p>Aperol, Campari</p>
-                        </li> -->
-                        <!-- <li>
-                            <h3>Gin Tonic Ginepraio <span class="price">9</span></h3>
-                            <p>Biologico. Servito con acqua tonica J. Gasco</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
                             <p>Aromatico. Servito con acqua tonica J. Gasco</p>
