--- a/asporto/index.html
+++ b/asporto/index.html
@@ -113,7 +113,7 @@
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare - Fritti</h2>
+                    <h2 class="subheader">Per Stuzzicare</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Bocconcini di Pollo <span class="price">5,9</span></h3>
