--- a/menu/index.html
+++ b/menu/index.html
@@ -241,38 +241,46 @@
                             <p>Manzo, pecorino vallesina, bacon croccante, erbe di campo strascinate<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>Primavera <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, composta di feta, pomodorini e timo; insalata riccia<br>
-                            <small>Contiene: Glutine, Latte, Uova</small></p></li>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li> -->
                         <!-- <li>
                             <h3>Deciso <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, gorgonzola, guanciale, pomodorini confit<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>  -->
-                        <li>
+                        <!-- <li>
                             <h3>Fave e Pecorino <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, pecorino vallesina, guanciale, fave in porchetta<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
-                        </li> 
+                        </li>  -->
                         <!-- <li>
                             <h3>Mantovano <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante<br>
                             <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Estivo <span class="price">11,9 / doppio 15,9</span></h3>
-                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
-                        </li> -->
+                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli <br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li>
                         <li>
                             <h3>Carbonara <span class="price">11,9 / doppio 15,9</span></h3>
                             <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe<br>
                             <small>Contiene: Glutine, Latte, Uova</small></p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Greco <span class="price">10,5 / doppio 14,5</span></h3>
-                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
-                        </li> -->
+                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li>
+                        <li>
+                            <h3>Norma <span class="price">11,9 / doppio 15,9</span></h3>
+                            <p>Manzo, crema di melanzane e basilico, pomodorini confit, ricotta salata.<br>
+                            <small>Contiene: Glutine, Latte, Uova</small></p>
+                        </li>
                     </ul>
                 </div>
            </div>
