--- a/menu/index.html
+++ b/menu/index.html
@@ -349,7 +349,7 @@
 <li>
                                 <h3>Cremoso ai tre cioccolati<span class="price">5</span></h3>
                                 <p>Cremoso al cioccolato fondente, al latte e bianco<br>
-                                <small>Contiene: Glutine, Latte</small></p>
+                                <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
 
                             <!-- <li>
