--- a/menu/index.html
+++ b/menu/index.html
@@ -346,12 +346,11 @@
                                 <p>Brownie con nocciole. Servito con crema chantilly<br>
                                 <small>Contiene: Frutta a Guscio, Glutine, Latte, Uova</small></p>
                             </li>
-<li>
-                                <h3>Cremoso ai tre cioccolati<span class="price">5</span></h3>
+                            <li>
+                                <h3>Cremoso ai Tre Cioccolati<span class="price">5</span></h3>
                                 <p>Cremoso al cioccolato fondente, al latte e bianco<br>
                                 <small>Contiene: Glutine, Latte, Uova</small></p>
                             </li>
-
                             <!-- <li>
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout<br>
