--- a/contatti/index.html
+++ b/contatti/index.html
@@ -221,7 +221,7 @@
             </div>
         </div>
     </div> -->
-    <div class="panel-home-n">
+    <!-- <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
                 <h2>Dove e Cosa Siamo</h2>
@@ -229,6 +229,11 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
+                    <div class="medium-12 large-12 columns no-margin-list-bullet">
+                <script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
+                <link href="//assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
+                <ul class="juicer-feed" data-feed-id="beerstrot" data-gutter="15"></ul>
+            </div>
                <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home" data-clearing>
                     <li>
                         <a href="https://www.beerstrot.it/asset/img/large/insegna-beerstrot-con-cielo.jpg" class="th">
@@ -330,7 +335,7 @@
                 <p>Serviamo anche ottimi dolci fatti in casa e una piccola selezione di vini locali.</p>
             </div>
         </div>
-    </div>
+    </div> -->
 <!-- inizio footer -->
     <footer class="panel-footer">
         <div class="row">
