--- a/prenota/index.html
+++ b/prenota/index.html
@@ -285,6 +285,7 @@ input[type="radio"] {
 
     <link rel="stylesheet" type="text/css" href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css"/ >
     <script src="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
+    <script src="../js/aws-sdk.min.js"></script>
     <script src="../js/prenota.js"></script>
 <style>
 #notification {
