using cdn to avoid node_modules

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -283,8 +283,8 @@ input[type="radio"] {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="../js/app.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css"/ >
-    <script src="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="../js/aws-sdk.min.js"></script>
     <script src="../js/prenota.min.js"></script>
 <style>
