complying to specifications given

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -140,7 +140,7 @@ input[type="radio"] {
             </div>
             <div class="row">
               <div class="small-6 columns">
-                <label>Telefono
+                <label>Telefono<svg class="icon" focusable="false"><use xlink:href="#required"></use></svg>
                   <input tabindex="2" type="text" class="form-control" placeholder="111 222 3333" id="telephone">
                 </label>
               </div>
@@ -169,7 +169,7 @@ input[type="radio"] {
             </div>
             <div class="row" id="dateRow" hidden>
               <div class="columns">
-                <label>Periodo<svg class="icon" focusable="false"><use xlink:href="#required"></use></svg>
+                <label>Scegli l'orario<svg class="icon" focusable="false"><use xlink:href="#required"></use></svg>
                   <ul class="small-block-grid-2" id="shiftGrid">
                   </ul>
                 </label>
@@ -286,7 +286,7 @@ input[type="radio"] {
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="../js/aws-sdk.min.js"></script>
-    <script src="../js/prenota.min.js"></script>
+    <script src="../js/prenota.js"></script>
 <style>
 #notification {
     background: lightcoral;
