--- a/prenota/index.html
+++ b/prenota/index.html
@@ -286,7 +286,7 @@ input[type="radio"] {
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="../js/aws-sdk.min.js"></script>
-    <script src="../js/prenota.js"></script>
+    <script src="../js/prenota.min.js"></script>
 <style>
 #notification {
     background: lightcoral;
