--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -91,7 +91,7 @@
                 <ul class="small-block-grid-2 extra-space-hamburger data-equalize">
                     <li><a href="#" class="small button data-equalizer-watch">19.00-21.00</a></li>
                     <li><a href="#" class="small button data-equalizer-watch">19.30-21.30</a></li>
-                    <li><a href="#" class="small button disabled data-equalizer-watch">20.00-22.00 <br>Completo</a></li>
+                    <li><a href="#" class="small button disabled data-equalizer-watch">20.00-22.00 <br>Non Disponibile</a></li>
                     <li><a href="#" class="small button">20.30-22.30</a></li>
                     <li><a href="#" class="small button disabled">21.00-23.00 <br>Non disponibile</a></li>
                     <li><a href="#" class="small button">21.30-23.00</a></li>
