--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -63,7 +63,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Prenota</h1>
+            <h1>Riserva un Tavolo</h1>
             <br>
         </div>
     </header>
@@ -76,7 +76,7 @@
         <div class="row data-equalize">
             <div class="small-6 medium-5 columns">
                 <label>Quante persone*
-                    <input type="number" name="FNAME" class="required" id="mce-FNAME" placeholder=""/>
+                    <input type="text" pattern="\d* name="FNAME" class="required" id="mce-FNAME" placeholder=""/>
                 </label>
             </div>
             <div class="small-6 medium-5 columns end">
@@ -167,8 +167,10 @@
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 		  			<li>
-						<h4 class="subheader">Prenota</h4>
-						<p><a href="https://www.beerstrot.it/prenota/" class="button small"><span>Prenota</span></a></p>
+						<h4 class="subheader">Contatti</h4>
+						<p><a href="#" class=""><span>Riserva un Tavolo</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                    </li>
 					</li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
