--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -76,7 +76,7 @@
         <div class="row data-equalize">
             <div class="small-6 medium-5 columns">
                 <label>Quante persone*
-                    <input type="text" pattern="\d* name="FNAME" class="required" id="mce-FNAME" placeholder=""/>
+                    <input type="text" pattern="\d*" name="FNAME" class="required" id="mce-FNAME" placeholder=""/>
                 </label>
             </div>
             <div class="small-6 medium-5 columns end">
