--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Una filosofia semplice: siamo specialisti in Hamburger Goduriosi e Birre artigianali, ma quelle buone, in un locale bellissimo"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/contatti/"/>
-    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -88,8 +88,8 @@
                 <label>A che Ora*
                 </label>
                 <!-- Questi bottoni devono essere grandi uguali e distanziati meglio -->
-                <ul class="small-block-grid-2  extra-space-hamburger">
-                    <li><a href="#" class="small button">19.00-21.00</a></li>
+                <ul class="small-block-grid-2  extra-space-hamburger button-no-margin">
+                    <li><a href="#" class="small button button-no-margin">19.00-21.00</a></li>
                     <li><a href="#" class="small button">19.30-21.30</a></li>
                     <li><a href="#" class="small button disabled">20.00-22.00</a></li>
                     <li><a href="#" class="small button">20.30-22.30</a></li>
